package ca.mcmaster.se2aa4.island.team121.modules.jsonparser;

import ca.mcmaster.se2aa4.island.team121.TileType;
import org.json.JSONObject;

import java.util.List;

public interface JSONParser {
    TileType getScan(JSONObject response);
    String echoGround(JSONObject response);
    int echoDistance(JSONObject response);

    int getCost(JSONObject response);

    List<String> getId(JSONObject response);
}
